--- a/auth/package.json
+++ b/auth/package.json
@@ -14,9 +14,11 @@
   "type": "commonjs",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.96",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
+    "mongoose": "^6.13.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
