--- a/auth/package.json
+++ b/auth/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/mongoose": "^5.11.96",
+    "cookie-session": "^1.4.0",
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.2.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.13.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
