--- a/tickets/package.json
+++ b/tickets/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@ticket-system/common": "^1.0.3",
+    "@ticket-system/common": "^1.0.5",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^8.5.9",
@@ -31,6 +31,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.13.8",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
