--- a/expiration/package.json
+++ b/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "orders",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -21,27 +21,15 @@
   "type": "commonjs",
   "dependencies": {
     "@ticket-system/common": "^1.0.9",
-    "@types/cookie-session": "^2.0.49",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/mongoose": "^5.11.96",
-    "cookie-session": "^1.4.0",
-    "express": "^4.21.2",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^7.2.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.13.8",
-    "mongoose-update-if-current": "^1.4.0",
+    "@types/bull": "^3.15.9",
+    "bull": "^4.16.5",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
-    "@types/supertest": "^6.0.3",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.1.4",
-    "supertest": "^7.1.0",
     "ts-jest": "^29.3.2"
   }
 }
