--- a/payments/package.json
+++ b/payments/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@ticket-system/common": "^1.0.10",
+    "@ticket-system/common": "^1.0.11",
     "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^8.5.9",
@@ -33,6 +33,7 @@
     "mongoose": "^8.15.0",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^18.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
