--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cd auth && docker build -t ducanhle1992/auth .
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run: docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_ENV.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKET_ENV.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       - run: docker push ducanhle1992/auth
