--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Log in to Docker
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_ENV.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ENV.DOCKER_PASSWORD }}
       - name: Build image
         run: cd auth && docker build -t ducanhle1992/auth .
       - name: Push image
