--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -14,10 +14,10 @@ jobs:
       - name: Check out GitHub codes
         uses: actions/checkout@v2
       - name: Log in to Docker
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_ENV.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ENV.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Build image
         run: cd auth && docker build -t ducanhle1992/auth .
       - name: Push image
