--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out GitHub codes
+      - name: Checkout code
         uses: actions/checkout@v2
       - name: Log in to Docker
         uses: docker/login-action@v3
@@ -22,3 +22,12 @@ jobs:
         run: cd auth && docker build -t ducanhle1992/auth .
       - name: Push image
         run: docker push ducanhle1992/auth
+      - name: Setup UpCloud CLI
+        uses: upcloudltd/upcloud-cli-action@main
+        with:
+          username: ${{ secrets.UPCLOUD_USERNAME }}
+          password: ${{ secrets.UPCLOUD_PASSWORD }}
+      - name: Setup kubeconfig
+        run: upctl kubernetes config 0de978bb-de63-4284-b1e4-6673808fb193
+      - name: Restart deployment
+        run: kubectl rollout restart deployment auth-depl
