--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Setup kubeconfig
         run: upctl kubernetes config 0de978bb-de63-4284-b1e4-6673808fb193
       - name: Apply all deployments
-        run: kubectl apply -f infra/k8s
+        run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
