--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'auth/**'
+      - "auth/**"
 
 jobs:
   build:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Log in to Docker
+      - name: Login to Docker
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -28,6 +28,6 @@ jobs:
           username: ${{ secrets.UPCLOUD_USERNAME }}
           password: ${{ secrets.UPCLOUD_PASSWORD }}
       - name: Setup kubeconfig
-        run: upctl kubernetes config 0de978bb-de63-4284-b1e4-6673808fb193
+        run: upctl kubernetes config 0de978bb-de63-4284-b1e4-6673808fb193 --write ticket-booking-app_kubeconfig.yaml && export KUBECONFIG=$(pwd)/ticket-booking-app_kubeconfig.yaml
       - name: Restart deployment
         run: kubectl rollout restart deployment auth-depl
