--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: auth
           image: ducanhle1992/auth
+          imagePullPolicy: Never
           env:
             - name: MONGO_URI
               value: "mongodb://auth-mongo-srv:27017/auth"
