--- a/infra/k8s/expiration-depl.yaml
+++ b/infra/k8s/expiration-depl.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: expiration
           image: ducanhle1992/expiration
+          imagePullPolicy: Never
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
