--- a/infra/k8s/orders-depl.yaml
+++ b/infra/k8s/orders-depl.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: orders
           image: ducanhle1992/orders
+          imagePullPolicy: Never
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
