--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: tickets
           image: ducanhle1992/tickets
+          imagePullPolicy: Never
           env:
             - name: NATS_CLIENT_ID
               valueFrom:
