--- a/.github/workflows/deploy-auth.yml
+++ b/.github/workflows/deploy-auth.yml
@@ -26,7 +26,7 @@ jobs:
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_TOKEN }}
-      - name: Setup DigitalOcean kubeconfig 
+      - name: Setup DigitalOcean in kubeconfig
         run: doctl kubernetes cluster kubeconfig save ticket-system
       - name: Restart deployment
         run: kubectl rollout restart deployment auth-depl
