--- a/.github/workflows/deploy-manifests.yml
+++ b/.github/workflows/deploy-manifests.yml
@@ -17,7 +17,7 @@ jobs:
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_TOKEN }}
-      - name: Setup DigitalOcean kubeconfig
+      - name: Setup DigitalOcean in kubeconfig
         run: doctl kubernetes cluster kubeconfig save ticket-system
       - name: Apply all deployments
         run: kubectl apply -f infra/k8s && kubectl apply -f infra/k8s-prod
